fixed display inconsistencies

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,9 +7,13 @@ body{
 }
 
 div{
-    font-size:1.5em;
+    font-size:1.25em;
     line-height:2em;
     text-align:center;
+}
+
+#wins,#status{
+    margin-top:1em;
 }
 
 
